Bug 1561955 - Make about:protections support dark mode. r=ewright,johannh
Differential Revision: https://phabricator.services.mozilla.com/D38210

UltraBlame original commit: 13bb9ba5f69bfd0827c6807278ae1413d246502d

--- a/browser/components/protections/content/protections.css
+++ b/browser/components/protections/content/protections.css
@@ -5,115 +5,6 @@ root
 -
 card
 -
-box
--
-shadow
-:
-0
-1px
-4px
-0
-rgba
-(
-12
-12
-13
-0
-.
-1
-)
-0
-1px
-0
-0
-rgba
-(
-0
-0
-0
-0
-.
-05
-)
-;
--
--
-card
--
-background
-:
-#
-FFF
-;
--
--
-clickable
--
-text
--
-hover
-:
-hsla
-(
-0
-0
-%
-70
-%
-.
-2
-)
-;
--
--
-clickable
--
-text
--
-active
-:
-hsla
-(
-0
-0
-%
-70
-%
-.
-3
-)
-;
--
--
-card
--
-divider
-:
-rgba
-(
-12
-12
-13
-0
-.
-1
-)
-1px
-solid
-;
--
--
-report
--
-background
-:
-#
-FAFAFC
-;
--
--
-card
--
 padding
 :
 24px
@@ -227,33 +118,6 @@ color
 ;
 -
 -
-blue
--
-60
-:
-#
-0060DF
-;
--
--
-blue
--
-70
-:
-#
-003eaa
-;
--
--
-blue
--
-80
-:
-#
-002275
-;
--
--
 column
 -
 width
@@ -261,77 +125,8 @@ width
 16px
 ;
 }
-a
-{
-color
-:
-var
-(
--
--
-blue
--
-60
-)
-;
-text
--
-decoration
-:
-none
-;
-}
-a
-:
-active
-{
-color
-:
-var
-(
--
--
-blue
--
-70
-)
-;
-}
-a
-:
-hover
-a
-:
-active
-{
-text
--
-decoration
-:
-underline
-;
-}
 body
 {
-background
--
-color
-:
-var
-(
--
--
-report
--
-background
-)
-;
-font
-:
-message
--
-box
-;
 margin
 -
 top
@@ -493,6 +288,7 @@ auto
 card
 -
 header
+>
 button
 {
 font
@@ -501,35 +297,7 @@ size
 :
 0
 .
-95rem
-;
-background
--
-color
-:
-var
-(
--
--
-blue
--
-60
-)
-;
-border
--
-radius
-:
-2px
-;
-border
-:
-none
-;
-color
-:
-#
-FFFFFF
+95em
 ;
 cursor
 :
@@ -564,52 +332,6 @@ center
 }
 .
 card
--
-header
-button
-:
-hover
-{
-background
--
-color
-:
-var
-(
--
--
-blue
--
-70
-)
-;
-}
-.
-card
--
-header
-button
-:
-active
-{
-background
--
-color
-:
-var
-(
--
--
-blue
--
-80
-)
-;
-}
-.
-report
--
-card
 .
 lockwise
 -
@@ -619,8 +341,6 @@ card
 -
 header
 .
-report
--
 card
 .
 monitor
@@ -893,8 +613,6 @@ cover
 ;
 }
 .
-report
--
 card
 {
 display
@@ -920,39 +638,9 @@ rows
 %
 auto
 ;
-border
--
-radius
+padding
 :
-3px
-;
-background
--
-color
-:
-var
-(
--
--
-card
--
-background
-)
-;
-box
--
-shadow
-:
-var
-(
--
--
-card
--
-box
--
-shadow
-)
+0
 ;
 margin
 -
@@ -962,17 +650,9 @@ bottom
 ;
 }
 .
-report
--
-card
-.
 card
 -
 header
-.
-report
--
-card
 .
 card
 -
@@ -1017,8 +697,6 @@ padding
 ;
 }
 .
-report
--
 card
 .
 card
@@ -1029,13 +707,15 @@ font
 -
 size
 :
-1rem
+inherit
 ;
 line
 -
 height
 :
-22px
+1
+.
+25
 ;
 margin
 :
@@ -1047,8 +727,6 @@ default
 ;
 }
 .
-report
--
 card
 .
 content
@@ -1071,7 +749,7 @@ size
 :
 0
 .
-85rem
+85em
 ;
 cursor
 :
@@ -1083,6 +761,19 @@ protection
 -
 details
 {
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
 background
 :
 url
@@ -1120,7 +811,7 @@ size
 :
 0
 .
-75rem
+75em
 ;
 display
 :
@@ -1146,11 +837,13 @@ var
 (
 -
 -
-clickable
+in
 -
-text
+content
 -
-hover
+button
+-
+background
 )
 ;
 }
@@ -1171,11 +864,15 @@ var
 (
 -
 -
-clickable
+in
 -
-text
+content
 -
-active
+button
+-
+background
+-
+hover
 )
 ;
 }
@@ -1193,8 +890,6 @@ bold
 ;
 }
 .
-report
--
 card
 .
 card
@@ -1205,13 +900,19 @@ border
 -
 top
 :
+1px
+solid
 var
 (
 -
 -
-card
+in
 -
-divider
+content
+-
+border
+-
+color
 )
 ;
 grid
@@ -1259,7 +960,7 @@ size
 :
 0
 .
-8rem
+8em
 ;
 }
 #
@@ -1704,7 +1405,7 @@ size
 :
 0
 .
-9rem
+9em
 ;
 width
 :
@@ -1732,17 +1433,12 @@ top
 -
 25px
 ;
-color
-:
-#
-0C0C0D
-;
 font
 -
 size
 :
 .
-8rem
+8em
 ;
 }
 input
@@ -1763,9 +1459,9 @@ inline
 block
 ;
 margin
+-
+bottom
 :
-0
-0
 -
 1px
 ;
@@ -1788,6 +1484,10 @@ context
 properties
 :
 fill
+;
+fill
+:
+currentColor
 ;
 background
 -
@@ -1843,17 +1543,6 @@ socialblock
 svg
 )
 ;
-fill
-:
-var
-(
--
--
-social
--
-color
-)
-;
 color
 :
 var
@@ -1877,17 +1566,6 @@ cookie
 "
 ]
 {
-color
-:
-var
-(
--
--
-cookie
--
-color
-)
-;
 background
 -
 image
@@ -1909,17 +1587,6 @@ controlcenter
 svg
 )
 ;
-fill
-:
-var
-(
--
--
-cookie
--
-color
-)
-;
 color
 :
 var
@@ -1964,17 +1631,6 @@ tracker
 image
 .
 svg
-)
-;
-fill
-:
-var
-(
--
--
-tracker
--
-color
 )
 ;
 color
@@ -2021,15 +1677,6 @@ fingerprinters
 svg
 )
 ;
-fill
-:
-var
-(
--
--
-orange
-)
-;
 color
 :
 var
@@ -2072,15 +1719,6 @@ cryptominers
 svg
 )
 ;
-fill
-:
-var
-(
--
--
-grey
-)
-;
 color
 :
 var
@@ -2173,9 +1811,13 @@ var
 (
 -
 -
-clickable
+in
 -
-text
+content
+-
+box
+-
+background
 -
 hover
 )
@@ -2243,13 +1885,35 @@ background
 -
 color
 :
-#
-F9F9FB
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+background
+-
+odd
+)
 ;
 color
 :
-#
-737373
+var
+(
+-
+-
+in
+-
+content
+-
+deemphasized
+-
+text
+)
 ;
 font
 -
@@ -2257,13 +1921,15 @@ size
 :
 0
 .
-8rem
+8em
 ;
 line
 -
 height
 :
-20px
+1
+.
+75
 ;
 min
 -
@@ -2383,7 +2049,7 @@ size
 :
 0
 .
-875rem
+875em
 ;
 align
 -
@@ -2498,6 +2164,19 @@ text
 -
 icon
 {
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
 background
 -
 size
@@ -2550,6 +2229,19 @@ app
 -
 icon
 {
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
 background
 :
 url
@@ -2669,18 +2361,12 @@ size
 :
 1
 .
-125rem
+125em
 ;
 color
 :
-var
-(
--
--
-card
--
-background
-)
+#
+fff
 ;
 padding
 :
